--- a/.classpath
+++ b/.classpath
@@ -11,5 +11,6 @@
 	<classpathentry kind="src" path="array"/>
 	<classpathentry kind="src" path="Exception"/>
 	<classpathentry kind="src" path="File Handling"/>
+	<classpathentry kind="src" path="Practice"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
